tests/compile_fail/unknown_argument.rs
use structly::Structly;

#[derive(Structly)]
struct Demo {
    #[structly(nickname = "oops")]
    label: Option<String>,
}

fn main() {}
